fix: navbar layout spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ h3 {
 }
 
 h1 {
-  font-size: 2.8rem;
+  font-size: 3.5rem;
   margin-top: -1rem;
   padding-top: 6.5rem;
 }
@@ -65,13 +65,12 @@ p {
   position: sticky;
   top: 1px;
   z-index: 10;
-  width: 90%;
-  margin-left: 5%;
 }
 
 /* remove bullets from list elements in nav bar */
 .nav--bar ul {
   list-style: none;
+  margin-right: 1rem;
 }
 
 /* removes the "hamburger" menu", click event showHamburger triggers JavaScript "dropdown_menu"
@@ -83,8 +82,7 @@ to show menu, its position is define in this css rule-set */
   right: 1rem;
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  padding: 1rem;
+  z-index: 2;
 }
 
 /* JavaScript => dropdown_menu, toggles between hiding and showing the "hamburger" menu,
@@ -104,7 +102,6 @@ button is removed on wider view (.hide-desktop)*/
 /* float right, background image can show behind */
 .float-right {
   float: right;
-  margin-right: 1rem;
 }
 
 /* <<< end nav bar */
@@ -496,18 +493,25 @@ footer p {
     box-shadow: none;
     background-color: transparent;
     width: 100%;
-    margin: 1rem 0;
+    margin: 0;
+    padding: 0;
+    /* margin-right: 2rem; */
   }
 
   .hamburger_menu li {
     display: inline-block;
+    margin: 0.5rem;
+  }
 
+  .hamburger_menu li:first-child {
+    display: inline-block;
+    margin-left: 0rem;
   }
 
   .hamburger_menu .button {
     width: auto;
     font-size: 1.3rem;
-    margin: auto;
+    /* margin: auto; */
   }
 
   .float-left {
